# eco_tracker

./: CMakeLists.txt  README.md
app/inc/: eco.hpp  eco_util.hpp  feature_extractor.hpp  get_reg_filter.hpp  interpolator.hpp  optimize_scores.hpp  parameters.hpp  sample_space.hpp  time_log.hpp  train_filter.hpp
app/src/: eco.cpp  eco_util.cpp  feature_extractor.cpp  get_reg_filter.cpp  interpolator.cpp  optimize_scores.cpp  run_eco_tracker.cpp  sample_space.cpp  train_filter.cpp
featuretools/inc/: fhog.h  sse.hpp
mathtools/inc/: ffttools.hpp  matrix_operator.hpp
mathtools/src/: ffttools.cpp  matrix_operator.cpp
moduletest/: convolution_test.cpp  feature_extractor_test.cpp
sequences/Jogging/: cfg.json
